--- a/frontend/src/app/shopping/components/shop/shop.component.css
+++ b/frontend/src/app/shopping/components/shop/shop.component.css
@@ -23,10 +23,21 @@
 
 .products {
   display: flex;
-  /* flex-wrap: wrap; */
-  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
-  width: 100%;
+  width: 90%;
   height: 100%;
-  margin: 1.5rem auto;
+  margin: 1.5rem 0;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: space-between;
+  width: 20%;
+  margin: 1.5rem;
+  background-color: var(--background);
+  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
